
          Added docs/api/.cvsignore file to ignore changes to the index.qhp file.

20100118: Added a button to the toolbar that runs a Qtstalker script. Will probably expand this
          to maybe a new script manager tab in the future. For now, we will just use the button.
          This function is not meant for indicator scripts, but for the expanding scripting
          facility that will eventually be able to script most qtstalker functions. You can run
          an indicator script if you want, but nothing will happen. We will see if we can integrate
          the two in the future to a single script queue.

          Modified the SYMBOL indicator function to better handle scripts. Format has changed. See
          the docs.

          Added a new SYMBOL_LIST function to the script interface. See the docs.

20100119: Changed the GET_INDICATOR script function. Added the BARS parm. This allows user to specify
          how many BARS they want returned. See docs for details.

20100121: In order to enable a simple scripting system, I felt it was better to break down the big classes
          into many simple classes. Wrote wrapper classes for every indicator. This way we can allow for
          flexibility and keep a single interface. Will be doing more of the same where possible.
          Added 50+ new classes, mostly ta-lib wrappers.

20100122: Added FI, LMS, PP, SZ, THERM, VFI, VIDYA indicators from 0.36.

20100130: Big changes to the indicators. I have reinstated the 0.36 version of indicators. Now we can have
          the old hard coded version that uses a GUI for settings and the script version. Use the CUS
          indicator to use scripts. Will be tweaking the indicators over time. Possibly adding MA
          capability for them.

          Consolidated many indicators into grouped functions like CDL, TRIG, MATH, MATH2 etc. See docs.

          Removed most of the /misc/CUS_examples that did not demonstrate good uses of indicator scripts.


