@@ -16,6 +16,8 @@ To Do:
 - documentation
 - update docs regarding '-session' command line option
 - fix BETA.perl example to use stock vs index
+- add volume bars to AD indicator
+
 
 
 Maybe some day:
