@@ -1,23 +1,19 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="qtstalker.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="qtstalker.css"
+ media="screen">
   <script type="text/javascript" src="qtstalker.js">
  </script>
-  <title>Qtstalker: CSV - Independent data loading for Comma-Separated Values
-  text files</title>
-  <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
+  <title>Qtstalker: CSV - Independent data loading for Comma-Separated
+Values text files</title>
+  <meta http-equiv="content-type"
+ content="text/html; charset=ISO-8859-1">
 </head>
-
 <body>
-
 <div id="content">
-
 <div id="rightPanel">
-
-<div id="version">
-</div>
-
+<div id="version"></div>
 <div id="toc">
 <hr>
 <ul>
@@ -26,66 +22,62 @@
 </ul>
 </div>
 </div>
-
 <h1>CSV - Independent data loading for Comma-Separated Values text files</h1>
-
-<p>'CSV' is a companion application for Qtstalker to "Import CSV Quotes". It
-enables the loading of data to the SQLite database for users that do not have
-better independent techniques for data management (e.g. connect your own
+<p>'CSV' is a companion application for Qtstalker to "Import CSV
+Quotes". It
+enables the loading of data to the SQLite database for users that do
+not have
+better independent techniques for data management (e.g. connect your
+own
 external database to Qtstalker). </p>
-
-<p>Note that this "CSV" application will always be basic, as it is intended
+<p>Note that this "CSV" application will always be basic, as it is
+intended
 that you manage your data as a separate concern. </p>
-
 <h2 id="data">Obtain the data as CSV files</h2>
-
-<p>If you purchase data from a reliable data supplier, then it should be
+<p>If you purchase data from a reliable data supplier, then it should
+be
 available as Comma-Separated Values (CSV) text files. </p>
-
-<p>If you want to use free end-of-day (EOD) data (e.g. provided by Yahoo) then
-you need to obtain that each day as a CSV file using some independent means,
+<p>If you want to use free end-of-day (EOD) data (e.g. provided by
+Yahoo) then
+you need to obtain that each day as a CSV file using some independent
+means,
 e.g. manual download via web browser; or automated using 'wget', etc. </p>
-
 <p>The field delimiter can be any character. The default is comma. </p>
-
 <h2 id="quality">Data quality</h2>
-
-<p>You should have some independent means for data verification, e.g. a Perl
+<p>You should have some independent means for data verification, e.g. a
+Perl
 script. </p>
-
-<p>This "CSV" application will do some basic error detection while loading the
+<p>This "CSV" application will do some basic error detection while
+loading the
 data. </p>
-
 <h2 id="filename">File names</h2>
-
-<p>The data filenames can have any filename extension, e.g. ibm.txt or ibm.csv
+<p>The data filenames can have any filename extension, e.g. ibm.txt or
+ibm.csv
 or any other. </p>
-
-<p>It is useful to set the "Use file name for symbol" option. Some data files
-will not have the symbol name on every data row. If they do, then specify that
+<p>It is useful to set the "Use file name for symbol" option. Some data
+files
+will not have the symbol name on every data row. If they do, then
+specify that
 field to be "Ignore". </p>
-
-<p>The filename extension will be stripped and the basename part will be used,
-e.g. for "ibm.txt" the symbol will be "ibm". Similarly for uppercase, e.g. for
+<p>The filename extension will be stripped and the basename part will
+be used,
+e.g. for "ibm.txt" the symbol will be "ibm". Similarly for uppercase,
+e.g. for
 "GOOG.csv" the symbol will be "GOOG". </p>
-
 <h2 id="date-time">Date or Date-Time format</h2>
-
 <p>The date format is using the <a
-href="http://doc.qtsoftware.com/qdatetime.html#fromString-2">Qt date</a> format
-mask. That documentation explains how to specify any date or date-time format.
+ href="http://doc.qtsoftware.com/qdatetime.html#fromString-2">Qt date</a>
+format
+mask. That documentation explains how to specify any date or date-time
+format.
 </p>
-
 <p>Some examples: </p>
-
 <table>
-  <thead>
-    <tr>
-      <th>Input</th>
-      <th>Format</th>
-    </tr>
-  </thead>
-  <tbody>
+  <thead> <tr>
+    <th>Input</th>
+    <th>Format</th>
+  </tr>
+  </thead> <tbody>
     <tr>
       <td>2009-07-15</td>
       <td>yyyy-MM-dd</td>
@@ -100,60 +92,29 @@ mask. That documentation explains how to specify any date or date-time format.
     </tr>
   </tbody>
 </table>
-
 <h2 id="operation">Operation</h2>
-
-<p>"CSV" is a command-line tool. This enables you greater flexibility and
+<p>"CSV" is a command-line tool. This enables you greater flexibility
+and
 automation for your data loading. </p>
-
 <p>Here are the switches and some examples of usage: </p>
-<pre>-S is symbol
-
--D is date
-
--T is time
-
--O is open
-
--H is high
-
--L is low
-
--C is close
-
--V is volume
-
--I is open interest
-
--i is an input file containing quotes
-
--d is date format
-
--t is time format
-
--f is csv field format 'D,O,H,L,C,V,I'
-
--s is the delimiter
-</pre>
-
+<pre>-S is symbol<br><br>-D is date<br><br>-T is time<br><br>-O is open<br><br>-H is high<br><br>-L is low<br><br>-C is close<br><br>-V is volume<br><br>-I is open interest<br><br>-i is an input file containing quotes<br><br>-d is date format<br><br>-t is time format<br><br>-f is csv field format 'D,O,H,L,C,V,I,G'<br><br>Use these fields to represent each line of text in the csv file.<br>It is important to note that a line must contain at least the D,O,H,L,C,V fields in order to succeed otherwise the text will be rejected.<br></pre>
+<ul>
+  <li>D is a date field</li>
+  <li>O is an open price field</li>
+  <li>H is a high price field</li>
+  <li>L is a low price field</li>
+  <li>C is a close price field</li>
+  <li>V is a volume field</li>
+  <li>I is an open interest field</li>
+  <li>G is used to ignore any unwanted fields in the line of text<br>
+  </li>
+</ul>
+<br>
+<pre>-s is the delimiter<br></pre>
 <p>Some examples: </p>
-<pre>to import a csv file with same symbol 'FOO', an example would be:
-CSV -i /home/user/csv.txt -d yyyy/MM/dd
-
-same as above but using the filename for Symbol (i.e. bhp):
-CSV -i /home/user/bhp.txt -d yyyy/MM/dd -f D,O,H,L,C,V,I
-
-to import a csv file with multiple symbols, an example would be:
-CSV -i /home/user/csv.txt -d yyyy/MM/dd -f S,D,O,H,L,C,V,I -s ,
-
-to import a single quote, an example would be:
-CSV -d yyyy/MM/dd -s , -S FOO -D 2009/11/11 -O 100.5 -H 150.75 -L 50 -C 125.75 -V 100000 -I 123456
-</pre>
-
+<pre>to import a csv file with same symbol 'FOO', an example would be:<br>CSV -i /home/user/csv.txt -d yyyy/MM/dd<br><br>same as above but using the filename for Symbol (i.e. bhp):<br>CSV -i /home/user/bhp.txt -d yyyy/MM/dd -f D,O,H,L,C,V,I<br><br>to import a csv file with multiple symbols, an example would be:<br>CSV -i /home/user/csv.txt -d yyyy/MM/dd -f S,D,O,H,L,C,V,I -s ,<br><br>to import a single quote, an example would be:<br>CSV -d yyyy/MM/dd -s , -S FOO -D 2009/11/11 -O 100.5 -H 150.75 -L 50 -C 125.75 -V 100000 -I 123456<br></pre>
 <h2 id="todo">To do</h2>
-<pre>* Get some content from the old "cvs.html" doc.
-
-</pre>
+<pre>* Get some content from the old "cvs.html" doc.<br><br></pre>
 </div>
 </body>
 </html>
